[main] fixed wrong font weight at card component

--- a/src/widget/card-product/ui/card/styles.module.sass
+++ b/src/widget/card-product/ui/card/styles.module.sass
@@ -20,6 +20,7 @@
   object-fit: cover
 
 .author
+  font-weight: 500
   margin-top: 20px
   color: #86928B
   font-size: 18px
@@ -28,6 +29,7 @@
   white-space: nowrap
 
 .title
+  font-weight: 500
   color: #2C2D35
   font-size: 30px
   margin-top: 10px
@@ -40,6 +42,7 @@
   min-height: 42px
 
 .price
+  font-weight: 500
   margin-top: 9px
   font-size: 24px
   color: #598D66
